--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -56,18 +56,13 @@
 *::before,
 *::after {
   box-sizing: border-box;
-  margin: 0;
   font-weight: normal;
+  margin: 0;
 }
 
 body {
-  min-height: 100vh;
   color: var(--color-text);
   background: var(--color-background);
-  transition:
-    color 0.5s,
-    background-color 0.5s;
-  line-height: 1.6;
   font-family:
     Inter,
     -apple-system,
@@ -82,7 +77,14 @@ body {
     'Helvetica Neue',
     sans-serif;
   font-size: 15px;
+  line-height: 1.6;
+  min-height: 100vh;
+  place-items: center;
+  text-align: justify;
   text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
+  transition:
+    color 0.5s,
+    background-color 0.5s;
   -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
 }
