--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,18 +1,21 @@
 @import './base.css';
 
 #app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+  display: flex;
+  flex-direction: column;
   font-weight: normal;
+  max-width: 1280px;
+  min-height: 100vh;
+  padding: 2rem;
+  place-items: center;
 }
 
 a,
 .green {
-  text-decoration: none;
   color: hsla(160, 100%, 37%, 1);
-  transition: 0.4s;
   padding: 3px;
+  text-decoration: none;
+  transition: 0.4s;
 }
 
 @media (hover: hover) {
@@ -21,19 +24,4 @@ a,
     background-color: hsla(160, 100%, 37%, 0.2);
   }
 
-}
-
-@media (min-width: 1024px) {
-
-  body {
-    display: flex;
-    place-items: center;
-  }
-
-  #app {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    padding: 0 2rem;
-  }
-  
 }
