--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -4,14 +4,18 @@
   display: flex;
   flex-direction: column;
   font-weight: normal;
+  margin: 0 auto;
   max-width: 1280px;
   min-height: 100vh;
   padding: 2rem;
   place-items: center;
 }
 
-a,
-.green {
+p {
+  text-align: justify;
+}
+
+a {
   color: hsla(160, 100%, 37%, 1);
   padding: 3px;
   text-decoration: none;
