--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,6 +1,80 @@
-@import './base.css';
+/* Graphic charts colors */
+:root {
+  --c-background-light: #fff9f4;
+  --c-background-dark: #121e4b;
 
-#app {
+  --c-elt-orange: #f57d1f;
+  --c-elt-blue: #69bcc4;
+
+  --c-text-black: #000000;
+  --c-text-white: #ffffff;
+}
+
+/* Website colors based on user preferences (light) */
+:root {
+  --color-background: var(--c-background-light);
+
+  --color-elt-orange: var(--c-elt-orange);
+  --color-elt-blue: var(--c-elt-blue);
+
+  --color-text: var(--c-text-black);
+  --color-link: var(--c-elt-blue);
+}
+
+/* Website colors based on user preferences (dark) */
+@media (prefers-color-scheme: dark) {
+
+  :root {
+    --color-background: var(--c-background-dark);
+
+    --color-text: var(--c-text-white);
+    --color-link: var(--c-elt-orange);
+  }
+  
+}
+
+
+/* Global style for all elements */
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+  font-weight: normal;
+  margin: 0;
+}
+
+/* Global style for body element */
+body {
+  color: var(--color-text);
+  background: var(--color-background);
+  font-family:
+    Inter,
+    -apple-system,
+    BlinkMacSystemFont,
+    'Segoe UI',
+    Roboto,
+    Oxygen,
+    Ubuntu,
+    Cantarell,
+    'Fira Sans',
+    'Droid Sans',
+    'Helvetica Neue',
+    sans-serif;
+  font-size: 15px;
+  line-height: 1.6;
+  min-height: 100vh;
+  min-width: 100vw;
+  place-items: center;
+  text-rendering: optimizeLegibility;
+  transition:
+    color 0.5s,
+    background-color 0.5s;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+}
+
+/* Global style for the div element containing the Vue.js application */
+div#app {
   display: flex;
   flex-direction: column;
   font-weight: normal;
@@ -11,10 +85,12 @@
   place-items: center;
 }
 
+/* Global style for p elements */
 p {
   text-align: justify;
 }
 
+/* Global style for a elements */
 a {
   color: var(--color-link);
   padding: 3px;
@@ -22,6 +98,7 @@ a {
   transition: 0.4s;
 }
 
+/* Global style when hovering over an a element */
 @media (hover: hover) {
 
   a:hover {
