--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,5 +1,5 @@
-/* Graphic charts colors */
 :root {
+  /* Graphic charts colors */
   --c-background-light: #fff9f4;
   --c-background-dark: #121e4b;
   --c-background-light-darker: #faefe6;
@@ -13,19 +13,17 @@
 
   --c-text-black: #000000;
   --c-text-white: #ffffff;
-}
 
-/* Website colors based on user preferences (light) */
-:root {
+  /* Website colors based on user preferences (light) */
   --color-background: var(--c-background-light);
   --color-background-darker: var(--c-background-light-darker);
   --color-background-transparent: var(--c-background-light-transparent);
 
-  --color-elt-orange: var(--c-elt-orange);
-  --color-elt-blue: var(--c-elt-blue);
-
   --color-text: var(--c-text-black);
   --color-link: var(--c-elt-blue);
+
+  --color-elt-orange: var(--c-elt-orange);
+  --color-elt-blue: var(--c-elt-blue);
   --color-border: var(--c-elt-grey-transparent);
 }
 
@@ -39,39 +37,29 @@
   --color-link: var(--c-elt-orange);
 }
 
-
-/* Global style for all elements */
 *,
 *::before,
 *::after {
   box-sizing: border-box;
-  font-weight: normal;
   margin: 0;
+  padding: 0;
 }
 
-/* Global style for body element */
 body {
   color: var(--color-text);
   background: var(--color-background);
   font-family:
     Inter,
-    -apple-system,
-    BlinkMacSystemFont,
-    'Segoe UI',
-    Roboto,
-    Oxygen,
-    Ubuntu,
-    Cantarell,
-    'Fira Sans',
-    'Droid Sans',
-    'Helvetica Neue',
+    system-ui,
     sans-serif;
-  font-size: 15px;
-  line-height: 1.6;
+  font-size: 16px;
+  font-weight: normal;
+  line-height: normal;
   min-height: 100vh;
   min-width: 100vw;
   overflow-x: hidden;
   place-items: center;
+  scroll-behavior: smooth;
   text-rendering: optimizeLegibility;
   transition:
     color 0.5s,
@@ -80,11 +68,9 @@ body {
   -webkit-font-smoothing: antialiased;
 }
 
-/* Global style for the div element containing the Vue.js application */
-div#app {
+#app {
   display: flex;
   flex-direction: column;
-  font-weight: normal;
   margin: 0 auto;
   max-width: 1280px;
   min-height: 100vh;
@@ -92,25 +78,43 @@ div#app {
   place-items: center;
 }
 
-/* Global style for p elements */
+main {
+  flex: 1;
+  min-width: 100%;
+}
+
+header,
+footer {
+  display: flex;
+  flex-direction: row;
+  place-items: center;
+}
+
+header {
+  line-height: 1.5;
+  margin-bottom: 2rem;
+  min-width: 100%;
+}
+
+footer {
+  margin-top: 2rem;
+}
+
 p {
   text-align: justify;
 }
 
-/* Global style for a elements */
 a {
   color: var(--color-link);
-  padding: 3px;
+  display: inline-block;
+  padding: 0.1rem 1rem;
   text-decoration: none;
-  transition: 0.4s;
-}
+  transition:
+    color 0.4s,
+    background-color 0.4s;
 
-/* Global style when hovering over an a element */
-@media (hover: hover) {
-
-  a:hover {
+  &:hover {
     color: var(--color-text);
     background-color: var(--color-link);
   }
-
 }
