--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -55,6 +55,7 @@ body {
   font-size: 16px;
   font-weight: normal;
   line-height: normal;
+  max-width: 100vw;
   min-height: 100vh;
   min-width: 100vw;
   overflow-x: hidden;
@@ -72,9 +73,9 @@ body {
   display: flex;
   flex-direction: column;
   margin: 0 auto;
-  max-width: 1280px;
+  max-width: 700px;
   min-height: 100vh;
-  padding: 2rem;
+  padding: 1em;
   place-items: center;
 }
 
@@ -83,21 +84,20 @@ main {
   min-width: 100%;
 }
 
-header,
-footer {
-  display: flex;
-  flex-direction: row;
-  place-items: center;
-}
-
 header {
-  line-height: 1.5;
-  margin-bottom: 2rem;
+  margin-bottom: 2em;
   min-width: 100%;
 }
 
 footer {
-  margin-top: 2rem;
+  font-size: 0.9em;
+  margin-top: 2em;
+}
+
+img {
+  max-height: 100%;
+  max-width: 100%;
+  object-fit: contain;
 }
 
 p {
@@ -107,7 +107,7 @@ p {
 a {
   color: var(--color-link);
   display: inline-block;
-  padding: 0.1rem 1rem;
+  padding: 0.1rem 1em;
   text-decoration: none;
   transition:
     color 0.4s,
@@ -116,5 +116,36 @@ a {
   &:hover {
     color: var(--color-text);
     background-color: var(--color-link);
+  }
+}
+
+@media (min-width: 700px) {
+  body {
+    font-size: 17px;
+  }
+
+  #app {
+    max-width: 700px;
+  }
+}
+
+@media (min-width: 1024px) {
+  body {
+    font-size: 18px;
+  }
+
+  #app {
+    max-width: 1024px;
+    padding: 2em;
+  }
+}
+
+@media (min-width: 1440px) {
+  body {
+    font-size: 20px;
+  }
+
+  #app {
+    max-width: 1440px;
   }
 }
