--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -79,7 +79,9 @@ body {
 }
 
 main {
+  display: flex;
   flex: 1;
+  flex-direction: column;
   min-width: 100%;
 }
 
@@ -99,7 +101,18 @@ img {
   object-fit: contain;
 }
 
+h1 {
+  font-size: 2em;
+  font-weight: bold;
+}
+
+h2 {
+  font-size: 1.6em;
+  font-weight: bold;
+}
+
 p {
+  font-size: 1.05em;
   text-align: justify;
 }
 
@@ -135,7 +148,7 @@ a {
 
   #app {
     max-width: 1024px;
-    padding: 2em;
+    padding: 2em 2em 1em 2em;
   }
 }
 
