--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -72,7 +72,6 @@ body {
   display: flex;
   flex-direction: column;
   margin: 0 auto;
-  max-width: 700px;
   min-height: 100vh;
   padding: 1em;
   place-items: center;
@@ -82,6 +81,7 @@ main {
   display: flex;
   flex: 1;
   flex-direction: column;
+  max-width: 100%;
   min-width: 100%;
 }
 
@@ -119,7 +119,7 @@ p {
 a {
   color: var(--color-link);
   display: inline-block;
-  padding: 0.1rem 1em;
+  padding: 0.1em 1em;
   text-decoration: none;
   transition:
     color 0.4s,
@@ -131,13 +131,13 @@ a {
   }
 }
 
-@media (min-width: 700px) {
+@media (min-width: 720px) {
   body {
     font-size: 17px;
   }
 
   #app {
-    max-width: 700px;
+    max-width: 720px;
   }
 }
 
