--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -40,6 +40,10 @@
   padding: 0;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   color: var(--color-text);
   background: var(--color-background);
@@ -52,7 +56,6 @@ body {
   min-width: 100vw;
   overflow-x: hidden;
   place-items: center;
-  scroll-behavior: smooth;
   text-rendering: optimizelegibility;
   transition:
     color 0.5s,
